--- a/CorujaPresentation/Views/Home/Index.cshtml
+++ b/CorujaPresentation/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
 }
 
 
-<!-- BODY ================================= -->
+<!-- APRESENTACAO ================================= -->
+
 <section id="blog" class="blog-section blog-layout-simple blog-layout-fullscreen-subscription-form blog-fullscreen section section-dark">
 
     <div class="section-background">
@@ -49,7 +50,7 @@
     </div>
 
 </section>
-<!-- CALL TO ACTION ================================= -->
+
 <section id="ganhe" class="ganhe-section section-dark section">
     <div class="container">
         <h2 class="section-heading text-center">CORUJA EDUCAÇÃO</h2>
