--- a/CorujaPresentation/Views/Home/Index.cshtml
+++ b/CorujaPresentation/Views/Home/Index.cshtml
@@ -23,16 +23,21 @@
                 <div class="row">
                     <div class="col-md-6 col-md-offset-1">
                         <div class="blog-heading text-center" data-animation="fadeIn">
+                          
                             <h1 class="animated fadeInDown wow animated" data-wow-delay=".1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeInDown;">CADA CRIANÇA É ÚNICA</h1>
+                           
                             <p class="blog-tagline animated fadeInDown wow animated all-caps" data-wow-delay=".2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInDown;">
-                                aprende de modo <span style="color:orange;font-weight:bold;">particular</span>
-                                <br>através de estímulos <span style="color:orange;font-weight:bold;">diversos</span>
-                                <br>cada um no seu <span style="color:orange;font-weight:bold;">próprio</span> ritmo
+                                aprende de modo <span class="orangeWrapper">particular</span>
+                                <br>através de estímulos <span class="orangeWrapper">diversos</span>
+                                <br>cada um no seu <span class="orangeWrapper">próprio</span> ritmo
+                           
                             </p>
                           
                         </div>
+                        
                         <div class="hr dotted animated fadeInDown animated" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInDown;">
                         </div>
+                    
                     </div>
                 </div>
                 <div class="row">
@@ -58,14 +63,7 @@
             <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
                 <div id="description_corujaedu" style="font-size:18px;">
                     <!-- Trigger the modal with a button -->
-                    <p>
-                        Fundada em 2013 como negócio social, a Coruja oferece um programa completo de
-                        <a data-toggle="modal" data-target="#myModalDI" href="http://canal.corujaedu.com.br/acessar/index.php#description_corujaedu">
-                            <u>diferenciação da instrução</u>
-                        </a>,
-                        com o objetivo de promover o desenvolvimento dos diversos perfis de alunos e
-                        permitir que todos aprendam.
-                    </p>
+                    <p class="text-center">Fundada em 2013 como negócio social, a Coruja oferece um programa completo de <a data-toggle="modal" data-target="#myModalDI" href="http://canal.corujaedu.com.br/acessar/index.php#description_corujaedu"><u>diferenciação da instrução</u></a>, com o objetivo de promover o desenvolvimento dos diversos perfis de alunos e permitir que todos aprendam.</p>
                 </div>
                 <!-- Modal -->
                 <div id="myModalDI" class="modal fade" role="dialog">
